// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component tests <GifGrid /> should show item when images are loaded with useFetchGifts 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Batman
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={1}
      key="1"
      title="Batman"
      url="https://localhost/anything.png"
    />
  </div>
</Fragment>
`;

exports[`Component tests <GifGrid /> the component should be displayed correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__bounce"
  >
    Batman
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
